typescript/checker/tests/conformance/es6/yieldExpressions/generatorOverloads3.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            111,
        ),
        hi: BytePos(
            126,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorOverloads3.ts:5:15
  |
5 |     *f(s: any): Iterable<any> { }
  |               ^^^^^^^^^^^^^^^

